# gogoanime

./: .gitignore  pyproject.toml
.github/workflows/: python-package.yml
gogoanime/: __init__.py  __main__.py  anime_info.py  download.py  login.py
